# crypto-currency-prediction

./: .gitignore  .pdm-python  Dockerfile  README.md  __main__.py  pyproject.toml
data/: CryptoCompareDataset.py  CryptoCompareDatasetGenerator.py  __init__.py
model/: CryptoPredictorModel.py  __init__.py
training/: EarlyStopper.py  Hyperparams.py  ModelTrainer.py  __init__.py  loss.py  optimizers.py
utils/: __init__.py
