[project]
name = "crypto-currency-prediction"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "", email = "" }]
dependencies = [
    "torch>=2.8.0",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.2",
    "matplotlib>=3.10.6",
    "requests>=2.32.5",
    "numpy>=2.3.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = { cmd = ["./.venv/bin/python3", "__main__.py"] }
deploy = { shell = "docker build -t crypto-predictor . && docker run -v $(pwd)/outputs:/app/outputs crypto-predictor" }
